# nzeza

./: .env.example  .gitignore  .gitmodules  AGENTS.md  COINBASE_ADVANCED_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  DYDX_V4_INTEGRATION.md  ENV-README.md  FINALIZATION_GUIDE.md  LICENSE  NEXT_STEPS.md  OPENSPEC_TDD_WORKFLOW_OVERVIEW.md  PHASE_5_1_IMPLEMENTATION_PLAN.md  PHASE_5_1_STATUS.md  PHASE_5_1_WEBSOCKET_ANALYSIS.md  PHASE_5_2_IMPLEMENTATION_PLAN.md  PORTFOLIO_MANAGEMENT.md  PRIORITY_FIXES.md  PRODUCTION_STATUS.md  README.md  README_SESSION_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_REPORT.md  REFACTOR_PHASE_QUICK_START.md  SECURITY.md  SESSION_2025_10_31_FINALIZATION_COMPLETE.md  SESSION_2025_10_31_GREEN_PHASE_COMPLETE.md  TDD_WORKFLOW.md  TRADER_USAGE_EXAMPLE.md  TRADING_SETUP.md  clippy.toml  deny.toml  dydx_mainnet.toml  finalize_feature.sh  load-env.sh  opencode.json  package-lock.json  rustfmt.toml  tdd_test_plan_phase_4_4.json  (+2 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  greetings.yml  labeler.yml  release.yml  stale.yml
data/: nzeza.db
docs/: ARCHITECTURE_REFACTORING.md  CI_CD.md  CI_CD_IMPLEMENTATION_SUMMARY.md  DYDX_V4_INTEGRATION.md  INTEGRATION_COMPLETE.md  PHASE3_COMPILATION_FIXES_SUMMARY.md  PHASE_5_1_GREEN_IMPLEMENTATION_PLAN.md  PHASE_5_1_RED_PHASE_STATUS.md  PHASE_5_1_REQUIRED_CHANGES.md  PHASE_5_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICK_START_PHASE4.md  README.md  README_PRODUCTION_AUDIT.md  SECURITY.md  SESSION_2025_10_28_AUDIT_SUMMARY.md  SESSION_2025_10_28_CLEANUP_SESSION_SUMMARY.md  SESSION_2025_10_28_PHASE4_COMPLETE.md  SESSION_2025_10_28_PHASE5_RESUME.md  SESSION_2025_10_28_PHASE_5_2_COMPLETE.md  SESSION_2025_10_28_SUMMARY.md  SESSION_2025_10_28_WEBSOCKET_CLEANUP_COMPLETE.md  SESSION_2025_10_29_REFACTOR_COMPLETE.md  SESSION_2025_10_29_WEBSOCKET_COMPILATION_ANALYSIS.md  SESSION_2025_10_29_WEBSOCKET_COMPILATION_COMPLETE.md  SESSION_2025_10_30_COMPLETION.md  SESSION_2025_10_30_READY_TO_BUILD.md  SESSION_2025_10_30_STRATEGIC_PLAN.md  SESSION_2025_10_31_OPENSPEC_COMPLETION.md  SESSION_2025_10_31_SUMMARY.md  SESSION_2025_10_31_TDD_IMPLEMENTATION_COMPLETE.md  SYMBOL_SCREENING.md  TDD_RED_PHASE_PORTFOLIO_RECONCILIATION_COMPLETE.md  TDD_RED_PHASE_SUMMARY.md  TDD_RED_PHASE_WEBSOCKET_TESTS_SUMMARY.md  TEST_SUITE_ANALYSIS.md
examples/: test_coinbase_advanced.rs  test_coinbase_connection.rs  test_dydx_connection.rs  test_v4_integration.rs
openspec/: AGENTS.md  feature_balance_and_trading.md  project.md
src/: auth.rs  config.rs  hardware_wallet.rs  lib.rs  main.rs  rate_limit.rs  secrets.rs  task_runner.rs  tests.rs
src/application/: mod.rs
src/domain/: concurrency_tests.rs  errors.rs  errors_tests.rs  (+4 more)
tests/: portfolio_reconciliation_e2e.rs  symbol_screening_e2e.rs
(+112 files in other folders)
