[package]
name = "nzeza"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
url = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ethers = { version = "2.0", features = ["abigen", "ws"] }
bip39 = "2.0"
thiserror = "1.0"
lru = "0.12"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["limit", "trace"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
governor = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
